--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -8,33 +8,31 @@
 >
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
+
+      <div class="modal-body">
+        <div class="login-container">
+     
+          <h1>Login</h1>
+                    <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
       </div>
-      <div class="modal-body ms-2">
-        <h1 class="modaltitle" id="exampleModalLabel">Login</h1>
-        <form action="" method="post">
-          <label for="nome">Usuário</label>
-          <input type="text" name="nome" />
+          <form action="" method="post">
+            <label for="nome">Usuário</label>
+            <input type="text" name="nome" />
 
-          <label for="password">Senha</label>
-          <input type="password" name="password" >
+            <label for="password">Senha</label>
+            <input type="password" name="password" />
 
-          <input type="submit" value="Entrar">
+            <input type="submit" value="Entrar" />
           </form>
-<div class="modalfooter">
-    
           <h3>Cadastre-se</h3>
-          <p>Ainda não possui conta? Cadastre-se no site</p>
-          <input type="submit" value="Cadastro">
-</div>
-
+       <p>Ainda não possui conta? Cadastre-se no site</p>
+     <button> <a href="">Cadastro</a></button>
+      
 
       </div>
 
