--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-bg">
   <div class="container">
-    <a class="navbar-brand" href="#"><img
+    <a class="navbar-brand" href="/"><img
         src="/assets/img/cat.png"
         width="50px"
         height="50px"
@@ -28,13 +28,15 @@
           >
        LOGIN
           </button>
+          
         </li>
         <li class="nav-item">
+          
           <button
             type="button"
             class="btn nav-link ms-5"
             data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
+            data-bs-target="#Modalregister"
           >
             REGISTRAR
           </button>
