--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,25 +16,25 @@
   <title>InstaCats</title>
 </head>
 <body>
-
-{{!-- BARRA DE NAVEGAÇÃO --}}
+{{#if session.UserId}}
+{{> navbarLogado}}
+{{else}}
   {{> navbar}}
+{{/if}}
+{{!-- BARRA DE NAVEGAÇÃO --}}
+
 {{#if messages.message}}
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <strong><div>
+  <strong>
 {{messages.message}}</strong>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-
+</div>
 {{/if}}
-
-{{> main}}
   {{> login}}
 {{> register}}
   {{{body}}}
 
-  <footer id="footer">
     {{> footer}}
-  </footer>
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
